# Brutal-Search-Engine

./: .gitignore  CMakeLists.txt  README.md  cpp_search_engine_scaffold.cpp
include/: inverted_index.h  tokenizer.h
sample_texts/: sample1.txt
scripts/: fetch_gutenberg.ps1
src/: inverted_index.cpp  main.cpp  tokenizer.cpp
web_ui/: index.html  server.py
